--- a/FRONTEND/REACT/project_1/src/App.css
+++ b/FRONTEND/REACT/project_1/src/App.css
@@ -40,3 +40,11 @@
 .read-the-docs {
   color: #888;
 }
+
+
+.elemento-lista {
+    margin-top: 4px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
